# otus-cpp

./: README.md
.github/workflows/: release-homework01.yml  release-homework1.yml  release.yml
homework01/: CMakeLists.txt  README.md  hello_test.cpp  lib.cpp  lib.h  main.cpp  version.cpp  version.h.in
homework01/tests/: CMakeLists.txt  version_test.cpp
